openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skt-bamoe-external-api
  labels:
    app.kubernetes.io/name: skt-bamoe-business-service
    app.kubernetes.io/instance: skt-bamoe-business-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: skt-bamoe-poc
    app.kubernetes.io/managed-by: manual
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: skt-bamoe-business-service
      app.kubernetes.io/instance: skt-bamoe-business-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skt-bamoe-business-service
        app.kubernetes.io/instance: skt-bamoe-business-service
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: skt-bamoe-poc
    spec:
      imagePullSecrets:
      - name: registry
      containers:
        - name: skt-bamoe-business-service
          image: quay.io/seokbin/bamoe-external-api:1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 18
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

# Made with Bob
